[bug fix] vertically long thumbnails are not cropped to square

--- a/styles/link-card.less
+++ b/styles/link-card.less
@@ -9,7 +9,7 @@
   display: flex;
   overflow: hidden;
   align-items: center;
-  height: 6em;
+  height: 8em;
 }
 
 .link-card:hover {
@@ -17,9 +17,7 @@
 }
 
 .link-card-image {
-  width: 6em;
-  height: 6em;
-  border-radius: 0px 0 0 0px;
+  width: 8em;
   object-fit: cover;
 }
 
@@ -40,7 +38,7 @@
 
 .link-card-description {
   display: -webkit-box;
-  -webkit-line-clamp: 2;
+  -webkit-line-clamp: 3;
   -webkit-box-orient: vertical;
   overflow: hidden;
   text-overflow: ellipsis;
